# uzh-cg

./: .dccache
Exercise 1/: .dccache  CMakeLists.txt  README.md
Exercise 1/src/: Cube.frag  Cube.vert  GLApp.h  GLExample.cpp  GLExample.h  GLIncludes.h  Model.cpp  Model.h  main.cpp
Exercise 2/: .dccache  CMakeLists.txt
Exercise 2/src/: Cube.cpp  Cube.frag  Cube.h  Cube.vert  Cuboid.cpp  Cuboid.h  GLApp.cpp  GLApp.h  GLExample.cpp  GLExample.h  GLIncludes.h  Shape.cpp  Shape.h
Exercise 3/: CMakeLists.txt
Exercise 3/shader/: Cube.vert  Torus.frag  Torus.vert
Exercise 3/src/: GLApp.cpp  GLExample.cpp  GLExample.h  MultiLine.cpp  Shape.cpp  Shape.h  Torus.cpp  Torus.h
Exercise 4/: CMakeLists.txt
Exercise 4/shader/: Cube.frag  Cube.vert  Torus.frag  Torus.vert
Exercise 4/src/: Camera.cpp  Camera.h  Cube.h  GLApp.h  GLExample.cpp  GLExample.h  MultiLine.h  ShaderProgram.h  Shape.cpp  Shape.h  Torus.cpp  main.cpp
Exercise 5/: CMakeLists.txt
Exercise 5/shader/: Cube.frag  Cube.vert  Lightbox.vert  Torus.frag  Torus.vert
Exercise 5/src/: Cube.cpp  GLExample.cpp  GLExample.h  MultiLine.cpp  ShaderProgram.cpp  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Torus.cpp  main.cpp
Exercise 6/: CMakeLists.txt
Exercise 6/shader/: Cube.frag  Cube.vert  Lightbox.frag  Normals.frag  Torus.frag  Torus.vert
Exercise 6/src/: Cube.cpp  GLExample.cpp  GLExample.h  GLIncludes.h  MultiLine.cpp  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Torus.cpp
